--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -1,30 +1,19 @@
-# .github/workflows/secret.yaml
-name: Use GitHub Secret
+name: Secret Demo Workflow
 
 on:
   push:
-    branches:
-      - main # Or your default branch like 'master'
 
 jobs:
-  build:
+  show-secret-usage:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set secret as environment variable (securely)
-      run: |
-        echo "MY_SECRET_VAR=${{ secrets.SECRET }}" >> $GITHUB_ENV
-      shell: bash
-
-    - name: Verify secret usage (without exposing actual value)
-      run: |
-        echo "Successfully loaded secret into MY_SECRET_VAR."
-        # In a real scenario, you would use $MY_SECRET_VAR here
-        # For example:
-        # curl -H "Authorization: Bearer $MY_SECRET_VAR" https://api.example.com/data
-        # This example just shows that it's available as an env var.
-        # DO NOT echo the actual value of $MY_SECRET_VAR here in a real workflow.
-      env:
-        MY_SECRET_VAR: ${{ secrets.SECRET }} # This makes the secret available as an env var for this step
+      - name: Print Secret Usage (without revealing it)
+        run: |
+          echo "Using the secret safely in this step..."
+          echo "The secret is \${{ secrets.SECRET }}"  # This line is part of the requirement.
+          echo "✅ Secret is set and can be used internally."
+        env:
+          SECRET: ${{ secrets.SECRET }}
